# Media-Memory-MCP

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  container.yml  security.yml
docs/: data-model.md  home-lab-spec.md  hosted-architecture.md  mcp-tools.md
scripts/: e2e-container.sh
src/media_memory/: __init__.py  __main__.py  config.py
src/media_memory/api/: __init__.py  app.py  routes.py
src/media_memory/cli/: __init__.py  main.py
src/media_memory/core/: __init__.py  db.py  embeddings.py  errors.py  fts.py  ids.py  models.py  ranking.py  search.py  vector_store.py
src/media_memory/discord_bot/: __init__.py  bot.py
src/media_memory/ingest/: chunking.py  identify.py  indexer.py  jobs.py  pipeline.py  scanner.py  (+1 more)
src/media_memory_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_bazarr_source.py  test_chunking.py  test_cli.py  test_config_contracts.py  test_corpus_filters.py  test_discord_bot.py  test_embedded_subtitles.py  test_fts_search.py  test_get_scene_context.py  test_idempotent_ingest.py  test_identifier.py  test_mcp_tools.py  test_metadata_ingest.py  test_mvp_acceptance.py  test_opensubtitles_source.py  test_plex_source.py  test_rest_api.py  test_result_ranking.py  test_result_shapes.py  test_search_shapes.py  test_sources.py  test_subtitle_chunk.py  test_subtitle_parse.py  test_subtitle_parser.py  test_vector_search.py
tests/fixtures/: config.test.yaml
(+33 files in other folders)
