[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "media-memory-mcp"
version = "0.1.0"
description = "Local-first MCP server for semantic search over personal media libraries"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
media-memory = "media_memory.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
