[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "media-memory-mcp"
version = "0.1.0"
description = "Local-first MCP server for semantic search over personal media libraries"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lancedb",
    "mcp",
    "openai",
    "pydantic",
    "pydantic-settings",
    "pysubs2",
    "PyYAML",
    "typer[all]>=0.12,<0.16",
]

[dependency-groups]
dev = [
    "basedpyright",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff",
]

[project.scripts]
media-memory = "media_memory.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.basedpyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "off"
